--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
                 <h2>NOS PRESTATIONS</h2>
                 <div class="list">
                 
-                    <h3> Batiments </h3>
+                    <h3> B&#226;timents </h3>
                     <h4>
                         Entretien d'immeubles,
                         parkings
                     </h4>
                     <p>
-                        Entretien quotidien ,hebdomadaire,mensuel,annuel d'immeubles,
-                        bureaux:shampoing,moquette,débarras.
+                        Entretien quotidien, hebdomadaire, mensuel, annuel d'immeubles,
+                        bureaux : shampoing, moquette, débarras.
                         Confiez-nous vos cahiers de charges pour l'&eacute;laboration de votre
                         devis en ligne,simple rapide et
                         gratuit.
@@ -82,7 +82,7 @@
                     <h4> Entretien ext&eacute;rieur/espaces verts</h4>
                     <p>
                         Nous mettons &agrave; votre dispositions des jardiniers pour
-                        vos travaux d'ext&eacute;ieur:taille des haies, tonte de
+                        vos travaux d'ext&eacute;rieur:taille des haies, tonte de
                         pelouse.
                         Contactez-nous directement via notre formulaire pour
                         la r&eacute;alisation de votre devis dans les plus brefs d&eacute;lais.
